--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
-  <head></head>
+  <head>
+    <style>
+      body {
+        background: white;
+      }
+    </style>
+  </head>
   <body>
     <button id="submit">send 1 lamport</button>
     <script src="index.ts" type="module" defer></script>
